kube/app-a.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-a
spec:
  selector:
    app: app-a
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-a
  labels:
    app: app-a
spec:
  selector:
    matchLabels:
      app: app-a
  replicas: 1
  template:
    metadata:
      name: app-a
      labels:
        app: app-a
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: app-a
        image: portertech/demo-app:latest
        ports:
        - protocol: TCP
          containerPort: 8080
      - name: sensu-agent
        image: sensu/sensu-testing:6.3.0
        command: [
          "/opt/sensu/bin/sensu-agent", "start",
          "--log-level", "debug",
        ]
