kube/app-b.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-b
spec:
  selector:
    app: app-b
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-b
  labels:
    app: app-b
spec:
  selector:
    matchLabels:
      app: app-b
  replicas: 1
  template:
    metadata:
      name: app-b
      labels:
        app: app-b
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: app-b
        image: portertech/demo-app:latest
        ports:
        - protocol: TCP
          containerPort: 8080
      - name: sensu-agent
        image: sensu/sensu-testing:6.3.0
        command: [
          "/opt/sensu/bin/sensu-agent", "start",
          "--log-level", "debug",
        ]
