kube/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sensu
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sensu.info
    http:
      paths:
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: sensu
              port:
                number: 3000
        - path: /api/(.*)
          pathType: Prefix
          backend:
            service:
              name: sensu
              port:
                number: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app-a
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: app-a.info
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-a
              port:
                number: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app-b
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: app-b.info
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-b
              port:
                number: 8080
